# RDK-X3

./: README.md  quick_build.sh  readme.txt
install/: local_setup.sh  setup.sh
install/xgo_body/include/xgo_body/xgo_body/msg/: body_pose.h  joint_angle.h  joint_angle.hpp  leg_pose.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h
install/xgo_body/include/xgo_body/xgo_body/msg/detail/: arm_pose__functions.h  arm_pose__rosidl_typesupport_fastrtps_c.h  arm_pose__rosidl_typesupport_introspection_c.h  arm_pose__rosidl_typesupport_introspection_cpp.hpp  arm_pose__struct.hpp  arm_pose__type_support.c  arm_pose__type_support.cpp  arm_pose__type_support.h  arm_pose__type_support.hpp  body_pose__functions.h  body_pose__rosidl_typesupport_fastrtps_c.h  body_pose__rosidl_typesupport_fastrtps_cpp.hpp  body_pose__rosidl_typesupport_introspection_c.h  body_pose__traits.hpp  body_pose__type_support.c  body_pose__type_support.cpp  body_pose__type_support.hpp  joint_angle__builder.hpp  joint_angle__functions.h  joint_angle__rosidl_typesupport_fastrtps_c.h  joint_angle__rosidl_typesupport_fastrtps_cpp.hpp  joint_angle__struct.hpp  joint_angle__traits.hpp  joint_angle__type_support.hpp  leg_pose__builder.hpp  leg_pose__functions.c  leg_pose__rosidl_typesupport_fastrtps_c.h  leg_pose__struct.hpp  leg_pose__type_support.cpp  leg_pose__type_support.hpp
install/xgo_body/local/lib/python3.10/dist-packages/xgo_body-0.0.0-py3.10.egg-info/: PKG-INFO  top_level.txt
install/xgo_body/local/lib/python3.10/dist-packages/xgo_body/msg/: _body_pose.py  (+2 more)
install/xgo_body/share/ament_index/resource_index/package_run_dependencies/: xgo_body
install/xgo_body/share/ament_index/resource_index/parent_prefix_path/: xgo_body
install/xgo_body/share/ament_index/resource_index/rosidl_interfaces/: xgo_body
install/xgo_body/share/xgo_body/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/xgo_body/share/xgo_body/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_xgo_body__rosidl_generator_cExport-noconfig.cmake  export_xgo_body__rosidl_generator_cppExport.cmake  export_xgo_body__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_xgo_body__rosidl_typesupport_fastrtps_cExport.cmake  export_xgo_body__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_xgo_body__rosidl_typesupport_fastrtps_cppExport.cmake  xgo_bodyConfig.cmake  xgo_body__rosidl_typesupport_cExport-noconfig.cmake  xgo_body__rosidl_typesupport_introspection_cExport.cmake  xgo_body__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/xgo_body/share/xgo_body/msg/: JointAngle.idl
install/xgo_body_py/share/xgo_body_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/xgo_device/lib/xgo_device/: device_info
install/xgo_device/share/xgo_device/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xgo_head/lib/xgo_head/log/: log.txt
install/xgo_head/share/ament_index/resource_index/parent_prefix_path/: xgo_head
install/xgo_head/share/xgo_head/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xgo_motion/lib/xgo_motion/: dog_show
install/xgo_motion/share/xgo_motion/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/xgo_body/: CMakeLists.txt  package.xml
src/xgo_body/include/xgo_body/: xgo_body.hpp
src/xgo_body/msg/: ArmPose.msg  LegPose.msg
src/xgo_body/src/: xgo_body.cpp
src/xgo_body_py/: package.xml  setup.cfg  setup.py
src/xgo_device/: setup.cfg  setup.py
src/xgo_device/xgo_device/: display_utils.py
src/xgo_head/: CMakeLists.txt
src/xgo_head/include/: GpioReader.h  MatrixLabel.h  SpiScreen2Inch.h  TGpioUtil.h  TLog.h  TSpiUtil.h  TUtil.h  XgoSpeaker.h  mainwindow.h  rclcomm.h
src/xgo_head/src/: GpioReader.cpp  MatrixLabel.cpp  SpiScreen2Inch.cpp  TGpioUtil.cpp  TLog.cpp  TSpiUtil.cpp  TUtil.cpp  XgoSpeaker.cpp  main.cpp  mainwindow.cpp  rclcomm.cpp
src/xgo_head/ui/: mainwindow.ui
src/xgo_motion/: package.xml  setup.cfg  setup.py
(+2 files in other folders)
